# compshare-cli

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
scripts/: check_release_version.py
skills/compshare-cli/: SKILL.md
skills/compshare-cli/agents/: openai.yaml
src/compshare_cli/: __init__.py  __main__.py  actions.py  api.py  cli.py  config.py  errors.py  i18n.py  insights.py  instance_templates.py  location.py  output.py  parsing.py  qa.py  remote_jobs.py  runtime.py  sdk.py  ssh.py  ssh_cache.py
src/compshare_cli/commands/: ask.py  common.py  doctor.py  feedback.py  image.py  instance.py  storage.py  team.py
tests/: test_actions.py  test_api.py  test_cli.py  test_config.py  test_feedback.py  test_instance_templates.py  test_location.py  test_output.py  test_parsing.py  test_qa.py  test_release_version.py  test_remote_jobs.py  test_sdk.py  test_ssh.py  test_ssh_cache.py
