[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "compshare-cli"
version = "0.3.0"
description = "Command-line client for CompShare GPU compute"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "CompShare" },
]
dependencies = [
  "click>=8.1,<9",
  "pexpect>=4.9,<5; platform_system != 'Windows'",
  "rich>=13,<15",
  "typer>=0.12,<1",
  "ucloud-sdk-python3>=0.11.103,<0.12",
  "urllib3>=1.26.18,<2; python_version < '3.10' and platform_system == 'Darwin'",
]

[project.urls]
Homepage = "https://github.com/BennielAllan/compshare-cli"
Repository = "https://github.com/BennielAllan/compshare-cli"
Changelog = "https://github.com/BennielAllan/compshare-cli/blob/master/CHANGELOG.md"
Issues = "https://github.com/BennielAllan/compshare-cli/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[project.scripts]
compshare = "compshare_cli.cli:main"
compshare-ssh-askpass = "compshare_cli.ssh:askpass"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]
